# Systematic-Automation-Engine

./: Cargo.toml  README.md  automation_engine.rs  central_coordinator.rs  executor.rs  main.rs  rewards.rs  starting.py  task_library.rs  task_model.rs  ui.rs  web_interaction.rs  worker.rs
observation_layer/: dynamic_detection.rs  event_replayer.rs  interaction_log.rs  log_repository.rs  mod.rs
src/: automation_engine.rs  central_coordinator.rs  executor.rs  main.rs  rewards.rs  task_library.rs  task_model.rs  ui.rs  web_interaction.rs  worker.rs
src/observation_layer/: dynamic_detection.rs  event_replayer.rs  interaction_log.rs  log_repository.rs  mod.rs
src/utils/: helpers.rs
utils/: helpers.rs
